--- a/css/weibo.css
+++ b/css/weibo.css
@@ -14,6 +14,16 @@
 }
 
 .massageList {
-    width: 350px;
-    height: 50px;
+    width: 500px;
+    margin-top: 5px;
+    padding: 5px 10px;
+    border: 1px solid red;
+}
+
+.info {
+    border-bottom: 1px solid #eee;
+}
+
+.infoHandle {
+    float: right;
 }
